intro and skills blocks created

--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,5 @@
 @use "./variables" as *;
-// @use "./components" as *;
+@use "./components" as *;
 @use "./nav" as *;
 
 // font "Ubuntu" , "Roboto"
