--- a/_components.scss
+++ b/_components.scss
@@ -1,1 +1,81 @@
-// @use "./variables" as *;
+@use "./variables" as *;
+
+// HEADING
+.intro {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+
+  .intro-container {
+    background-color: $extra-color;
+    width: 80%;
+    height: auto;
+    padding: 20px;
+
+    &__text {
+      font-family: $secondary-font;
+      background-color: inherit;
+    }
+    &__heading {
+      font-family: $primary-font;
+      margin-top: 20px;
+      background-color: inherit;
+    }
+    &__link {
+      button {
+        padding: 10px;
+        border-radius: 5px;
+        border: 2px solid $secondary-color;
+        margin-top: 40px;
+        margin-bottom: 40px;
+      }
+    }
+  }
+}
+
+.skills {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 50px;
+
+  h2 {
+    font-family: $primary-font;
+    font-size: 18px;
+    text-align: center;
+    padding: 10px;
+    margin-top: 30px;
+  }
+
+  &__text {
+    font-family: $secondary-font;
+    font-size: 14px;
+    padding: 10px;
+    text-align: center;
+    display: flex;
+    align-self: center;
+    width: 300px;
+  }
+
+  &__icon-with-text {
+    width: 50%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    align-self: center;
+    margin-top: 20px;
+
+    img {
+      height: 45px;
+      padding: 5px;
+      display: block;
+      margin: 0 auto;
+    }
+
+    p {
+      font-family: $primary-font;
+      font-size: 12px;
+      text-align: center;
+    }
+  }
+}
