--- a/_components.scss
+++ b/_components.scss
@@ -79,3 +79,139 @@
     }
   }
 }
+
+.project {
+  &__text {
+    font-family: $primary-font;
+    text-align: center;
+    font-size: 18px;
+    padding: 10px;
+    margin-top: 30px;
+  }
+
+  &__cards {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .card {
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      width: 90%;
+      height: auto;
+
+      &__img-container {
+        background-color: $extra-color;
+        position: relative;
+        height: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+        margin-top: 20px;
+
+        &--blue-bg {
+          background-color: #d6eaf8;
+        }
+      }
+
+      &__img-container:hover {
+        background-color: $secondary-color;
+      }
+
+      &__img {
+        width: 80%;
+        height: auto;
+        margin-top: 30px;
+      }
+
+      h3 {
+        font-family: $secondary-font;
+        font-size: 14px;
+        color: $hilighted-color;
+        margin-top: 15px;
+      }
+
+      h4 {
+        font-family: $primary-font;
+        font-size: 20px;
+      }
+
+      p {
+        font-family: $secondary-font;
+        font-size: 14px;
+      }
+
+      &__button {
+        font-family: $secondary-font;
+        margin-top: 10px;
+        margin-bottom: 10px;
+
+        button {
+          background-color: $secondary-color;
+          font-size: 14px;
+          font-weight: bold;
+          text-decoration: none;
+          width: 88px;
+          margin-right: 10px;
+          border: 1px solid $primary-color;
+          border-radius: 5px;
+          padding: 5px;
+          box-shadow: 1px 1px 2px;
+          color: $primary-color;
+        }
+
+        button:hover {
+          background-color: white;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+.footer {
+  background-color: $secondary-color;
+  font-family: $secondary-font;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100 vw;
+  height: 150px;
+
+  &__link-icon {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    background-color: $secondary-color;
+  }
+
+  a {
+    border: 3px solid $primary-color;
+    border-radius: 50%;
+  }
+
+  img {
+    align-self: center;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    background-color: $secondary-color;
+  }
+
+  img:hover {
+    background-color: $secondary-color;
+  }
+
+  p {
+    background-color: $secondary-color;
+    color: $primary-color;
+    margin-top: 20px;
+  }
+}
