--- a/_nav.css
+++ b/_nav.css
@@ -7,12 +7,15 @@
   font-family: "Roboto", "sans-serif";
   font-size: 16px;
 }
+.top-nav .navbar__heading2 {
+  font-family: "Roboto", "sans-serif";
+  font-size: 16px;
+  display: none;
+}
 .top-nav .navbar__image {
   width: 50%;
 }
 .top-nav .navbar__list {
-  display: flex;
-  align-items: center;
   font-family: "Roboto", "sans-serif";
   display: none;
 }
