--- a/_components.css
+++ b/_components.css
@@ -28,8 +28,18 @@
   padding: 10px;
   border-radius: 5px;
   border: 2px solid #e3f6f5;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 100px;
+  margin-bottom: 70px;
+}
+.intro .intro-container img {
+  width: 200px;
+  height: auto;
+  border: 2px solid #e3f6f5;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  box-shadow: 1px 1px 5px;
+  display: none;
 }
 
 .skills {
@@ -195,6 +205,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 .about-me h2 {
   font-family: "Ubuntu", "sans-serif";
