--- a/main.css
+++ b/main.css
@@ -209,14 +209,14 @@
   margin-top: 50px;
   margin-bottom: 50px;
 }
-.about-me h2 {
+.about-me__heading {
   font-family: "Ubuntu", "sans-serif";
   font-size: 18px;
   text-align: center;
   padding: 10px;
   margin-bottom: 30px;
 }
-.about-me img {
+.about-me__my-image {
   width: 200px;
   height: auto;
   border: 2px solid #e3f6f5;
@@ -234,6 +234,10 @@
   font-family: "Roboto", "sans-serif";
   font-size: 12px;
   margin-bottom: 10px;
+}
+.about-me__laptop-girl {
+  display: none;
+  width: 180px;
 }
 
 .top-nav .navbar {
@@ -326,13 +330,13 @@
     display: grid;
     grid-template-areas: "myimage heading heading heading" "myimage text text text" "myimage text text text";
   }
-  .about-me h2 {
+  .about-me__heading {
     grid-area: heading;
     text-align: left;
-    margin-left: 45px;
     margin-bottom: 10px;
+    margin-left: 40px;
   }
-  .about-me img {
+  .about-me__my-image {
     grid-area: myimage;
     align-self: center;
   }
@@ -370,4 +374,28 @@
     display: unset;
     margin: 0;
   }
-}ourceMappingURL=main.css.map */
+
+  .about-me {
+    margin-bottom: 100px;
+    display: grid;
+    grid-template-areas: "heading heading" "text image";
+  }
+  .about-me__heading {
+    grid-area: heading;
+    margin-left: 0;
+  }
+  .about-me__my-image {
+    grid-area: image;
+  }
+  .about-me__text {
+    grid-area: text;
+    margin: 0;
+    width: 80%;
+  }
+  .about-me__my-image {
+    display: none;
+  }
+  .about-me__laptop-girl {
+    display: unset;
+  }
+}
