--- a/_components.scss
+++ b/_components.scss
@@ -190,7 +190,7 @@
 }
 
 .footer {
-  background-color: $secondary-color;
+  background-color: $extra-color;
   font-family: $secondary-font;
   font-size: 14px;
   display: flex;
@@ -204,7 +204,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    background-color: $secondary-color;
+    background-color: inherit;
   }
 
   a {
@@ -217,7 +217,7 @@
     border-radius: 50%;
     width: 25px;
     height: 25px;
-    background-color: $secondary-color;
+    background-color: $extra-color;
   }
 
   img:hover {
@@ -225,7 +225,7 @@
   }
 
   p {
-    background-color: $secondary-color;
+    background-color: inherit;
     color: $primary-color;
     margin-top: 20px;
   }
