--- a/main.css
+++ b/main.css
@@ -166,7 +166,7 @@
 }
 
 .footer {
-  background-color: #e3f6f5;
+  background-color: #aeb6bf;
   font-family: "Roboto", "sans-serif";
   font-size: 14px;
   display: flex;
@@ -180,7 +180,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  background-color: #e3f6f5;
+  background-color: inherit;
 }
 .footer a {
   border: 3px solid #272643;
@@ -191,13 +191,13 @@
   border-radius: 50%;
   width: 25px;
   height: 25px;
-  background-color: #e3f6f5;
+  background-color: #aeb6bf;
 }
 .footer img:hover {
   background-color: #e3f6f5;
 }
 .footer p {
-  background-color: #e3f6f5;
+  background-color: inherit;
   color: #272643;
   margin-top: 20px;
 }
@@ -243,11 +243,12 @@
 .top-nav .navbar {
   display: grid;
   grid-template-columns: 5fr 1fr;
-  padding: 18px;
+  padding: 10px;
 }
 .top-nav .navbar__heading {
   font-family: "Roboto", "sans-serif";
   font-size: 16px;
+  padding: 10px;
 }
 .top-nav .navbar__heading2 {
   font-family: "Roboto", "sans-serif";
@@ -309,21 +310,17 @@
   .top-nav .navbar__image {
     display: none;
   }
-
   .intro .intro-container__heading {
     text-align: center;
   }
-
   .skills__icon-with-text {
     display: flex;
     justify-content: center;
   }
-
   .projects__cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
-
   .about-me {
     margin-left: 100px;
     margin-right: 100px;
@@ -343,7 +340,6 @@
   .about-me__text {
     grid-area: text;
   }
-
   .footer {
     display: flex;
     flex-direction: row-reverse;
@@ -374,7 +370,6 @@
     display: unset;
     margin: 0;
   }
-
   .about-me {
     margin-bottom: 100px;
     display: grid;
@@ -398,4 +393,4 @@
   .about-me__laptop-girl {
     display: unset;
   }
-}
+}/*# sourceMappingURL=main.css.map */
