--- a/_components.scss
+++ b/_components.scss
@@ -64,7 +64,7 @@
 
   &__text {
     font-family: $secondary-font;
-    font-size: 14px;
+    font-size: 12px;
     padding: 10px;
     text-align: center;
     display: flex;
@@ -112,11 +112,12 @@
     align-items: center;
 
     .card {
-      padding: 10px;
       display: flex;
       flex-direction: column;
       width: 90%;
       height: auto;
+      margin-left: 20px;
+      margin-right: 20px;
 
       &__img-container {
         background-color: $extra-color;
@@ -146,14 +147,15 @@
 
       h3 {
         font-family: $secondary-font;
-        font-size: 14px;
+        font-size: 12px;
         color: $hilighted-color;
         margin-top: 15px;
       }
 
       h4 {
         font-family: $primary-font;
-        font-size: 20px;
+        font-size: 16px;
+        margin-bottom: 10px;
       }
 
       p {
