--- a/_variables.scss
+++ b/_variables.scss
@@ -1,7 +1,9 @@
 $primary-color: #272643;
 $secondary-color: #e3f6f5;
 $hilighted-color: white;
-$extra-color: #aeb6bf;
+$extra-color: #4a5867;
+
+// #aeb6bf
 
 $primary-font: "Ubuntu", "sans-serif";
 $secondary-font: "Roboto", "sans-serif";
