--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
   justify-content: center;
 }
 .intro .intro-container {
-  background-color: #aeb6bf;
+  background-color: #4a5867;
   width: 80%;
   height: auto;
   padding: 20px;
@@ -13,16 +13,18 @@
 .intro .intro-container__text {
   font-family: "Roboto", "sans-serif";
   background-color: inherit;
+  color: white;
 }
 .intro .intro-container__heading {
   font-family: "Ubuntu", "sans-serif";
   margin-top: 20px;
   background-color: inherit;
+  color: white;
 }
 .intro .intro-container__link {
   display: flex;
   justify-content: center;
-  background-color: #aeb6bf;
+  background-color: #4a5867;
   text-decoration: none;
 }
 .intro .intro-container__link button {
@@ -108,7 +110,7 @@
   margin-right: 20px;
 }
 .projects__cards .card__img-container {
-  background-color: #aeb6bf;
+  background-color: #4a5867;
   position: relative;
   height: auto;
   width: 100%;
@@ -168,7 +170,7 @@
 }
 
 .footer {
-  background-color: #aeb6bf;
+  background-color: #e3f6f5;
   font-family: "Roboto", "sans-serif";
   font-size: 14px;
   display: flex;
@@ -193,10 +195,10 @@
   border-radius: 50%;
   width: 25px;
   height: 25px;
-  background-color: #aeb6bf;
+  background-color: #e3f6f5;
 }
 .footer img:hover {
-  background-color: #e3f6f5;
+  background-color: white;
 }
 .footer p {
   background-color: inherit;
