--- a/_components.scss
+++ b/_components.scss
@@ -128,8 +128,8 @@
       &__img-container {
         background-color: $extra-color;
         position: relative;
-        height: auto;
-        width: 100%;
+        height: 240px;
+        width: 280px;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
@@ -146,8 +146,10 @@
       }
 
       &__img {
-        width: 80%;
-        height: auto;
+        // width: 80%;
+        // height: auto;
+        width: 220px;
+        height: 200px;
         margin-top: 30px;
       }
 
