--- a/_components.scss
+++ b/_components.scss
@@ -120,16 +120,14 @@
     .card {
       display: flex;
       flex-direction: column;
-      width: 90%;
       height: auto;
-      margin-left: 20px;
-      margin-right: 20px;
+      align-items: center;
 
       &__img-container {
         background-color: $extra-color;
         position: relative;
         height: 240px;
-        width: 280px;
+        width: 300px;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
@@ -146,28 +144,30 @@
       }
 
       &__img {
-
-        width: 220px;
+        width: 90%;
         height: 200px;
         margin-top: 30px;
       }
 
-      h3 {
-        font-family: $secondary-font;
-        font-size: 12px;
-        color: $hilighted-color;
-        margin-top: 15px;
-      }
+      &__text-container {
+        h3 {
+          font-family: $secondary-font;
+          font-size: 12px;
+          color: $hilighted-color;
+          margin-top: 15px;
+        }
 
-      h4 {
-        font-family: $primary-font;
-        font-size: 16px;
-        margin-bottom: 10px;
-      }
+        h4 {
+          font-family: $primary-font;
+          font-size: 16px;
+          margin-bottom: 10px;
+        }
 
-      p {
-        font-family: $secondary-font;
-        font-size: 12px;
+        p {
+          width: 320px;
+          font-family: $secondary-font;
+          font-size: 12px;
+        }
       }
 
       &__button {
