--- a/main.scss
+++ b/main.scss
@@ -151,6 +151,8 @@
     }
 
     &__cards {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
       .card {
         h3 {
           font-size: 16px;
