Adjusted top nav bar

--- a/main.css
+++ b/main.css
@@ -370,6 +370,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .top-nav {
+    padding-top: 10px;
+  }
   .top-nav .navbar {
     display: grid;
     grid-template-columns: 2fr 2fr;
@@ -427,6 +430,10 @@
   }
 }
 @media screen and (min-width: 1024px) {
+  .top-nav .navbar {
+    display: grid;
+    grid-template-columns: 3.8fr 2fr;
+  }
   .intro .intro-container {
     display: grid;
     grid-template-areas: "text text text" "heading heading image" "button button image";
