--- a/main.scss
+++ b/main.scss
@@ -94,6 +94,11 @@
     padding-right: 50px;
     font-size: 20px;
   }
+
+  .experience {
+    margin-left: 100px;
+
+  }
 }
 
 @media screen and (min-width: 1024px) {
